fix incoming attack, render enemies on mobile

--- a/tetris-app/src/view/Game.css
+++ b/tetris-app/src/view/Game.css
@@ -14,20 +14,3 @@ body,
 div {
   margin: 0px 0px;
 }
-
-.hidden {
-  visibility: hidden;
-}
-
-@media (max-width: 1000px) {
-  .SoundBar,
-  .EnemyContainer {
-    display: none;
-  }
-  .GridCanvas {
-    width: 200px;
-    height: 440px;
-    border-style: solid;
-    border-width: 5px;
-  }
-}
